# pixel_icons_generator

./: .gitignore  Cargo.toml  license  readme.md
src/: main.rs
