[package]
name = "pixel_icons_generator"
version = "0.1.0"
authors = ["Wybe <wybe@ruurdwestra.nl>"]
edition = "2018"
license = "MIT"
license-file = "license"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
anyhow = "*"
rand = "*"
rand_chacha = "*" # For guaranteed repeatable randomness.
structopt = "*"